Fix line wrapping in codemirror

--- a/src/styles/codemirror.css
+++ b/src/styles/codemirror.css
@@ -17,6 +17,7 @@
 
 .cm-editor .cm-line {
   padding: 0;
+  white-space: break-spaces;
 }
 
 .cm-editor .cm-scroller {
